--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -37,8 +37,7 @@
     text-transform: uppercase;
     margin: 3px;
 }
-.test
+.wrapText
 {
-    width: 100%;
-    height: auto;
+    word-break:break-all;
 }
