--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -39,5 +39,13 @@
 }
 .wrapText
 {
-    word-break:break-all;
+    word-break:break-word;
 }
+
+.flex-wrapper {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
